clusters/apps/env/production/soho/hassio/prod/ingressroute.hass-codeserver.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-codeserver
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: hass.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`hass-config.${SECRET_DOMAIN}`)"
      middlewares:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: auth-system
        - name: l5d-home-assistant-codeserver-middleware
          namespace: soho
      priority: 10
      services:
        - name: home-assistant-codeserver
          port: 12321
    - kind: Rule
      match: "Host(`zigbee-config.${SECRET_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: auth-system
          port: 9000
      middlewares:
        - name: l5d-authentik-middleware
          namespace: auth-system
  tls:
    secretName: crj-wildcard-certificate
    domains:
      - main: hass-config.${SECRET_DOMAIN}
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: l5d-home-assistant-codeserver-middleware
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: "home-assistant-codeserver.soho.svc.cluster.local:12321"
