clusters/apps/env/production/soho/hassio/prod/ingressroute.hass.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: hass.${FAMILY_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`hass.${FAMILY_DOMAIN}`)"
      services:
        - name: home-assistant
          port: 8123
    - kind: Rule
      match: "Host(`home.${FAMILY_DOMAIN}`)"
      services:
        - name: home-assistant
          port: 8123
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: hass.${FAMILY_DOMAIN}
