clusters/apps/env/production/soho/hassio/prod/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: hass.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`hass.${SECRET_DOMAIN}`)"
      middlewares:
        - name: l5d-home-assistant-middleware
          namespace: soho
      services:
        - name: home-assistant
          port: 8123
  tls:
    secretName: crj-wildcard-certificate
    domains:
      - main: hass.${SECRET_DOMAIN}
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: l5d-home-assistant-middleware
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: "home-assistant.soho.svc.cluster.local:8123"
