clusters/apps/env/production/soho/hassio/prod/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hass
spec:
  hosts:
    - 'hass.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 8123
            host: home-assistant.soho.svc.cluster.local
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hass-codeserver
spec:
  hosts:
    - 'hass-config.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 12321
            host: home-assistant-codeserver.soho.svc.cluster.local
          weight: 100
